[package]
name = "sumo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
axum = "0.6.4"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.4", features = ["derive"] }
daemonize = "0.4.1"
futures = "0.3.26"
futures-util = "0.3.26"
http-serde = "1.1.2"
libc = "0.2.139"
nix = "0.26.2"
prettytable-rs = "0.10.0"
procfs = "0.15.0"
prost = "0.11.6"
regex = "1.7.1"
rustc-hash = "1.1.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = "0.1.11"
tonic = "0.8.3"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"

[dev-dependencies]
expect-test = "1.4.0"

[build-dependencies]
anyhow = "1.0.68"
tonic-build = "0.8.4"
