[package]
name = "sumo-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.4", features = ["derive"] }
gloo-net = "0.2.6"
wasm-bindgen-futures = "0.4.34"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"

[dev-dependencies]
expect-test = "1.4.0"
